examples/test/testpolicy9656.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9656
  namespace: namespace56
spec:
  podSelector:
    matchLabels:
      key6: value37
      key46: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value2
      podSelector:
        matchLabels:
          key13: value9
          key17: value35
